one more component

--- a/aviasales-demo-frontend/public/index.html
+++ b/aviasales-demo-frontend/public/index.html
@@ -29,6 +29,7 @@
       <div id="root"></div>
       <div id="header"></div>
       <div id="transplantation"></div>
+      <div id="fly"></div>
     </div>
     <!--
       This HTML file is a template.
